Modify new post I have added date in YAML syntax used in this file

--- a/_posts/2021-12-21-title.md
+++ b/_posts/2021-12-21-title.md
@@ -1,6 +1,5 @@
 ---
-What is Java?
+title: What is Java?
+date: 21-12-2021
 ---
-
 Java is an object oriented programming language that is platform independent. It was developed by James Gosling and other contributors at Sun Microsystem in 1995 mid spring. This language uses Byte code to execute source code on any JVM installed on different OS.
-
